2001-12-18  Jody Goldberg <jody@gnome.org>

	* fn-date.c (help_datevalue) : fix embarassing typo.

2001-12-15  Jody Goldberg <jody@gnome.org>

	* Release 0.99.0

2001-12-10  Jody Goldberg <jody@gnome.org>

	* fn-string.c (gnumeric_fixed) : burn ancient kruft and use the newly
	  exposed format engine.

2001-12-06  Jody Goldberg <jody@gnome.org>

	* fn-information.c (gnumeric_cell) : const.

2001-11-30  Morten Welinder  <terra@diku.dk>

	* fn-information.c (gnumeric_expression): Fix empty-cell case.

2001-11-27  Andreas J. Guelzow <aguelzow@taliesin.ca>
	* fn-database.c (parse_database_criteria) use sheet from 
	  criteria range

2001-11-25  Jody Goldberg <jody@gnome.org>

	* fn-eng.c (gnumeric_improduct) : s/GList/ExprList/
	(gnumeric_imsum) : ditto.

	* fn-financial.c (gnumeric_npv) : ditto.

	* fn-information.c (gnumeric_check_for_err) : ditto.
	(gnumeric_iserror) : ditto.
	(gnumeric_isna) : ditto.
	(gnumeric_iserr) : ditto.
	(gnumeric_error_type) : ditto.
	(gnumeric_isblank) : ditto.
	(gnumeric_islogical) : ditto.
	(gnumeric_isnontext) : ditto.
	(gnumeric_isnumber) : ditto.
	(gnumeric_isref) : ditto.
	(gnumeric_istext) : ditto.
	(gnumeric_type) : ditto.

	* fn-logical.c (gnumeric_and) : ditto.
	(gnumeric_or) : ditto.
	(gnumeric_if) : ditto.

	* fn-lookup.c (gnumeric_choose) : ditto.
	(gnumeric_column) : ditto.
	(gnumeric_row) : ditto.
	 
	* fn-math.c (gnumeric_gcd) : ditto.
	(gnumeric_lcm) : ditto.
	(gnumeric_sum) : ditto.
	(gnumeric_suma) : ditto.
	(gnumeric_sumsq) : ditto.
	(gnumeric_multinomial) : ditto.
	(gnumeric_product) : ditto.
	(gnumeric_g_product) : ditto.
	(gnumeric_subtotal) : ditto.
	(gnumeric_seriessum) : ditto.
	(gnumeric_sumproduct) : ditto.

	* fn-stat.c (stat_helper) : ditto.
	(make_list) : ditto.
	(gnumeric_varp) : ditto.
	(gnumeric_var) : ditto.
	(gnumeric_stdev) : ditto.
	(gnumeric_stdevp) : ditto.
	(gnumeric_trimmean) : ditto.
	(gnumeric_mode) : ditto.
	(gnumeric_harmean) : ditto.
	(gnumeric_geomean) : ditto.
	(gnumeric_count) : ditto.